--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,8 +2,8 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <script src="https://utteranc.es/client.js"
         repo="famulare/typhoid-immune-dynamics"
-        issue-term="title"
-        theme="github-light"
+        issue-term="pathname"
+        theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
   </script>
