--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -3,6 +3,7 @@
   <script src="https://utteranc.es/client.js"
         repo="famulare/typhoid-immune-dynamics"
         issue-term="pathname"
+        label="comment"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
